# tagabaybay

./: .gitignore  CITATION.cff  Cargo.toml  README.md  main.py  pyproject.toml
docs/: algorithm.md  contributing.md  dev.md  ispeling_ng_wikang_filipino.md  rules.md
gold/: README.md  comparer.py  extractor.py  generator.py  validation.py
gold/data/: ching_chua.csv  common_drugs.csv  common_eng.csv  ph_fda_human.csv  wiki.csv
gold/eval/: common_drugs.csv_2026-01-14_22-25_jaztin_jimenez.txt  common_drugs.csv_2026-01-14_jaztin_jimenez.txt
gold/test/: von_neumann.txt
legacy/: README  main.py
llm/: BaybayinMoClaude.py
llm/results/: ching_chua.csv  common_drugs.csv  common_eng.csv  ph_fda_human.csv  wiki.csv
scraper/: main.py
scraper/.data/: loan_words.txt  scraped_ipas.txt
scripts/: eval_from_csv.py
src/: configs.rs  consts.rs  error.rs  g2p.rs  g2py.rs  lib.rs  main.rs
src/adaptation/: adapter.rs  alignment.rs  context.rs  cursor.rs  mod.rs  nativize.rs  orthographic.rs  phonetic.rs  replacement.rs  vowel.rs
src/alignment/: aligned_string.rs  alignment.rs  alignment_adapter.rs  mod.rs  morphology_alignment.rs
src/arpabet/: tokenize.rs
src/filipino/: orthography.rs
src/g2p/: arpa.rs  common.rs  ipa.rs  mod.rs
src/grapheme/: filipino.rs  mod.rs  phl_graphemes.rs  source.rs  src_graphemes.rs  tokenize.rs  types.rs
src/graphemes/: tokenize.rs
src/morphology/: README.md  mod.rs  morfessor_morphology.rs  parser.py  segment_cli.py  spacy.rs  test_model.py  train_model.py
src/phoneme/: ipa.rs  (+4 more)
tests/: alignment.rs  eval.rs  syllabification.rs
(+40 files in other folders)
