[package]
name = "tagabaybay"
version = "0.1.0"
edition = "2024"
[features]
default = []
debug-trace = []  # Enable debug output for adaptation steps
[dependencies]
itertools = "0.14.0"
once_cell = "1.21.3"
phonetisaurus-g2p = "0.1.1"
regex = "1.12.2"

[dev-dependencies]
chrono = "0.4"
pyo3 = { version = "0.27.2", features = ["extension-module", "auto-initialize"]}
